--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,3 @@
 [build]
-  command = ""            # No build step since it's a static site
-  publish = "."           # Publish current directory
-
-[[plugins]]
-  package = "netlify-plugin-one"   # Dummy plugin, won't affect anything
-
-  [plugins.inputs]
-  port = 80              # Dummy input just for syntax validation
-  
+  command = ""
+  publish = "."
