--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,12 @@
 [build]
   command = "npm run build"
+  commandOrigin = "config"
   publish = "out"
+  publishOrigin = "config"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+  origin = "config"
   [plugins.inputs]
-  skip = true
-  
+    skip = true
+    
