--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
+    "deploy": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
